--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <script>
-        var productIds = ['product1', 'product2']; // Fügen Sie weitere Produkt-IDs hinzu, wie benötigt
+        var productIds = ['product1', 'product2', 'product3', 'product4', 'product5', 'product6', 'product7', 'product8', 'product9' ]; // Fügen Sie weitere Produkt-IDs hinzu, wie benötigt
         
         productIds.forEach(function(id) {
           fetch('products/' + id + '/name.txt')
@@ -21,7 +21,7 @@
         </script>
         
         <script>
-            var productIds = ['product1', 'product2']; // Fügen Sie weitere Produkt-IDs hinzu, wie benötigt
+            var productIds = ['product1', 'product2', 'product3', 'product4', 'product5', 'product6', 'product7', 'product8', 'product9']; // Fügen Sie weitere Produkt-IDs hinzu, wie benötigt
 
             productIds.forEach(function(id) {
             fetch('products/' + id + '/picture.jpg')
@@ -39,18 +39,18 @@
     <table>
         <tr>
             <th><a href="products/product1/product1.html"><img id="picture1"  height="300px" width="300px"></a><br><label class="Label" id="product1">Produkt 1</label></th>
-            <th><img id="picture2" height="300px" width="300px"><br><label class="Label" id="product2">Produkt 2</label></th>
-            <th><img src="https://www.clickit-fotoaktionen.de/assets/images/a/Ideen_Wettbewerb_Produktfoto-quadrat-77f03131.jpg" height="300px" width="300px"><br><label class="Label">Produkt 3</label></th>
+            <th><a href="products/product2/product2.html"><img id="picture2"  height="300px" width="300px"></a><br><label class="Label" id="product2">Produkt 2</label></th>
+            <th><a href="products/product3/product3.html"><img id="picture3"  height="300px" width="300px"></a><br><label class="Label" id="product3">Produkt 3</label></th>
         </tr>
         <tr>
-            <th><a href="product1.html"><img src="https://www.clickit-fotoaktionen.de/assets/images/a/Ideen_Wettbewerb_Produktfoto-quadrat-77f03131.jpg" height="300px" width="300px"></a><br><label class="Label">Produkt 1</label></th>
-            <th><img src="https://www.clickit-fotoaktionen.de/assets/images/a/Ideen_Wettbewerb_Produktfoto-quadrat-77f03131.jpg" height="300px" width="300px"><br><label class="Label">Produkt 2</label></th>
-            <th><img src="https://www.clickit-fotoaktionen.de/assets/images/a/Ideen_Wettbewerb_Produktfoto-quadrat-77f03131.jpg" height="300px" width="300px"><br><label class="Label">Produkt 3</label></th>
+            <th><a href="products/product4/product4.html"><img id="picture4"  height="300px" width="300px"></a><br><label class="Label" id="product4">Produkt 4</label></th>
+            <th><a href="products/product5/product5.html"><img id="picture5"  height="300px" width="300px"></a><br><label class="Label" id="product5">Produkt 5</label></th>
+            <th><a href="products/product6/product6.html"><img id="picture6"  height="300px" width="300px"></a><br><label class="Label" id="product6">Produkt 6</label></th>
         </tr>
         <tr>
-            <th><img src="https://www.clickit-fotoaktionen.de/assets/images/a/Ideen_Wettbewerb_Produktfoto-quadrat-77f03131.jpg" height="300px" width="300px"><br><label class="Label">Produkt 1</label></th>
-            <th><img src="https://www.clickit-fotoaktionen.de/assets/images/a/Ideen_Wettbewerb_Produktfoto-quadrat-77f03131.jpg" height="300px" width="300px"><br><label class="Label">Produkt 2</label></th>
-            <th><img src="https://www.clickit-fotoaktionen.de/assets/images/a/Ideen_Wettbewerb_Produktfoto-quadrat-77f03131.jpg" height="300px" width="300px"><br><label class="Label">Produkt 3</label></th>
+            <th><a href="products/product7/product7.html"><img id="picture7"  height="300px" width="300px"></a><br><label class="Label" id="product7">Produkt 7</label></th>
+            <th><a href="products/product8/product8.html"><img id="picture8"  height="300px" width="300px"></a><br><label class="Label" id="product8">Produkt 8</label></th>
+            <th><a href="products/product9/product9.html"><img id="picture9"  height="300px" width="300px"></a><br><label class="Label" id="product9">Produkt 9</label></th>
         </tr>
     </table>
 </body>
