--- a/success.html
+++ b/success.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Success</title>
+    <link rel="icon" type="image/x-icon" href="Icon.svg">
 </head>
 <body>
     <h1 id="text">Fehler...</h1>
